Desenvolvimento do HTML, CSS e JS Concluídos

--- a/main.html
+++ b/main.html
@@ -70,7 +70,7 @@
         <div class="buy-powers">
         <h1 class="main-title" id="comprar-poderes">MEUS PODERES</h1>
         <div class="main-buy-powers">
-            <button class="btn-buy-powers" onclick="show-powers()">Visualizar meus poderes</button>
+            <button class="btn-buy-powers" onclick="showPowers()">Visualizar meus poderes</button>
         </div>
         </div>
     </section>
